--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             </div>
         </div>
         <!-- /.container -->
+        <iframe src="https://maps.google.com/maps?q=Coffee+Inn/@43.2406483,76.9261321&t=&z=17&ie=UTF8&iwloc=&output=embed" class="mapframe" allowfullscreen></iframe>
     </section>
     <!-- /#conts.section section-contacts -->
 </main>
