--- a/index.html
+++ b/index.html
@@ -111,9 +111,21 @@
                 <h4 class="contacts-box__item mail">mail@cofeeinn.com</h4>
 
                 <ul class="contacts-box__social">
-                    <li class="item fb"></li>
-                    <li class="item vk"></li>
-                    <li class="item ig"></li>
+                    <li class="item">
+                        <svg class="icon fb" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36">
+                            <path d="M33.4 0H2.6C1.2 0 0 1.2 0 2.6V33.4C0 34.8 1.2 36 2.6 36H19.2V22.1H14.6V16.6H19.2V12.6C19.2 8 22.1 5.4 26.2 5.4 28.2 5.4 29.9 5.6 30.4 5.7V10.5H27.5C25.3 10.5 24.9 11.6 24.9 13.2V16.6H30.3L29.5 22.1H24.9V36H33.4C34.8 36 36 34.8 36 33.4V2.6C36 1.2 34.8 0 33.4 0V0Z"/>
+                        </svg>
+                    </li>
+                    <li class="item">
+                        <svg class="icon vk" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36">
+                            <path d="M34.1 0H1.9C0.9 0 0 0.9 0 1.9V34.1C0 35.1 0.9 36 1.9 36H34.1C35.1 36 36 35.1 36 34.1V1.9C36 0.9 35.1 0 34.1 0ZM28.7 20.3C29.7 21.2 30.7 22.1 31.6 23.2 32 23.7 32.3 24.1 32.6 24.7 33 25.5 32.6 26.3 32 26.4L27.6 26.4C26.5 26.4 25.6 26 24.9 25.2 24.3 24.6 23.7 24 23.2 23.4 22.9 23.1 22.7 22.9 22.4 22.7 21.8 22.3 21.3 22.4 21 23 20.6 23.6 20.5 24.3 20.5 25 20.5 26 20.2 26.3 19.1 26.4 17 26.5 14.9 26.1 13 25 11.3 24.1 10 22.7 8.8 21.1 6.6 18.1 4.9 14.8 3.3 11.4 3 10.6 3.3 10.2 4.1 10.2 5.5 10.2 6.9 10.2 8.3 10.2 8.9 10.2 9.3 10.5 9.5 11.1 10.3 13 11.2 14.7 12.4 16.4 12.7 16.8 13 17.3 13.4 17.6 13.9 17.9 14.3 17.8 14.6 17.2 14.7 16.9 14.8 16.5 14.8 16.1 14.9 14.8 14.9 13.5 14.7 12.2 14.6 11.4 14.2 10.9 13.3 10.7 12.9 10.7 13 10.5 13.2 10.3 13.5 9.9 13.9 9.6 14.5 9.6L19.4 9.6C20.2 9.8 20.3 10.1 20.4 10.9L20.4 16.3C20.4 16.6 20.6 17.5 21.1 17.7 21.6 17.8 21.8 17.5 22.1 17.2 23.3 16 24.1 14.5 24.8 13 25.2 12.3 25.5 11.6 25.7 10.9 25.9 10.4 26.3 10.2 26.8 10.2L31.5 10.2C31.7 10.2 31.8 10.2 31.9 10.2 32.7 10.4 32.9 10.7 32.7 11.5 32.3 12.7 31.6 13.7 30.8 14.7 30.1 15.8 29.2 16.8 28.4 17.9 27.7 18.9 27.8 19.4 28.7 20.3Z"/>
+                        </svg>
+                    </li>
+                    <li class="item">
+                        <svg class="icon ig" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36">
+                            <path d="M26.4 6.4H9.6C7.8 6.4 6.4 7.8 6.4 9.6V26.4C6.4 28.2 7.8 29.6 9.6 29.6H26.4C28.2 29.6 29.6 28.2 29.6 26.4V9.6C29.6 7.8 28.2 6.4 26.4 6.4ZM18 25.4C13.9 25.4 10.6 22.1 10.6 18 10.6 13.9 13.9 10.6 18 10.6 22.1 10.6 25.4 13.9 25.4 18 25.4 22.1 22.1 25.4 18 25.4ZM25.4 12.7C24.2 12.7 23.3 11.8 23.3 10.6 23.3 9.5 24.2 8.5 25.4 8.5 26.5 8.5 27.5 9.5 27.5 10.6 27.5 11.8 26.5 12.7 25.4 12.7ZM18 12.7C15.1 12.7 12.7 15.1 12.7 18 12.7 20.9 15.1 23.3 18 23.3 20.9 23.3 23.3 20.9 23.3 18 23.3 15.1 20.9 12.7 18 12.7ZM30.7 0H5.3C2.4 0 0 2.4 0 5.3V30.7C0 33.6 2.4 36 5.3 36H30.7C33.6 36 36 33.6 36 30.7V5.3C36 2.4 33.6 0 30.7 0ZM31.7 26.4C31.7 29.3 29.3 31.7 26.4 31.7H9.6C6.7 31.7 4.3 29.3 4.3 26.4V9.6C4.3 6.7 6.7 4.3 9.6 4.3H26.4C29.3 4.3 31.7 6.7 31.7 9.6V26.4Z"/>
+                        </svg>
+                    </li>
                 </ul>
             </div>
         </div>
